Refactor, format and update API and frontend components, updated package-lock.json and .gitignore, fixed delete rounds, name of respondant, view edit rounds in general and a bunch of stuff to get it to work bare minimum
