# src/api/src/routes/editRounds.ts
@@ -1,7 +1,7 @@
 import express, { Request } from "express";
 
 import { RoundListModel } from "../models/round";
-import { NameIsAnonymous, TemplateModel } from "../models/template"; // Import the TemplateModel
+import { TemplateModel } from "../models/template"; // Import the TemplateModel
 import mongoose from "mongoose";
 import { animals, attributes } from "../models/randomNameList";
 
@@ -31,17 +31,15 @@ router.get("/edit/:editId", async (req: Request<EditParams>, res) => {
       return res.status(404).send("Template not found");
     }
     const doc = list.toObject();
-    const tempDoc = template.toObject();
     let userName = "";
-    /* if (tempDoc.nameIsAnonymous !== NameIsAnonymous.NAMNGIVET) { */
-    if (tempDoc.nameIsMandatory !== "MANDATORY") {
+    if (doc.nameIsMandatory !== "NAMNGIVET") {
       const rand1 = getRandomInt(attributes.length);
       const rand2 = getRandomInt(animals.length);
       userName = `${attributes[rand1]} ${animals[rand2]}`;
     }
-    // eslint-disable-next-line @typescript-eslint/no-unused-vars
-    const { _id, answers, ...rest } = doc;
-    res.json({ ...rest, userName, templateData: template });
+
+    const { _id, answers, ...rest } = doc; // Exclude only _id from the document
+    res.json({ ...rest, userName, templateData: template }); // Send the response without answers
   } catch (err: any) {
     switch (err.constructor) {
       case mongoose.Error.CastError:
@@ -59,7 +57,7 @@ router.put("/edit/:editId", async (req, res) => {
     const newAnswer = req.body;
     // Find the document with the given editId
     const existingRound = await RoundListModel.findOne({ editId: editId });
-    
+
     if (!existingRound) {
       return res.status(404).send("RoundData not found");
     }
@@ -79,7 +77,7 @@ router.put("/edit/:editId", async (req, res) => {
     newAnswer.userName = userNameToAdd;
     existingRound.answers.push(newAnswer);
     const updatedRound = await existingRound.save();
-    
+
     console.log("Updated Round:", updatedRound);
     res.status(200).send("Round answers updated successfully");
   } catch (err) {
