# src/api/src/routes/newtemplate.ts
@@ -3,22 +3,21 @@ import mongoose from "mongoose";
 import { TemplateModel } from "../models/template";
 
 interface ScoreDescription {
-    label: string;
-    heading: string;
-    description: string;
-  }
+  label: string;
+  heading: string;
+  description: string;
+}
 
-  interface Statement {
-    id: string;
-    text: string;
-  }
-  
-  interface InputCategory {
-    id: string;
-    name: string;
-    statements: Statement[];
-  }
-  
+interface Statement {
+  id: string;
+  text: string;
+}
+
+interface InputCategory {
+  id: string;
+  name: string;
+  statements: Statement[];
+}
 
 const router = express.Router();
 
@@ -39,36 +38,34 @@ router.post("/", async (req: Request, res) => {
     // Create a new template document
 
     const newTemplate = new TemplateModel({
-        templateName:templateBody.name,
-        scoreScale: {
-            start:1,
-            end:templateBody.scale,
-            descriptions: templateBody.scaleDetails.map((detail:ScoreDescription, index:number) => ({
-                score: index+1,
-                title: detail.heading,
-                description: detail.description
-              }))
-        },
-        mandatoryMotivations:false,
-        nameIsMandatory: "MANDATORY",
-        categories: templateBody.categories.map((cat:InputCategory) => ({
-            categoryName: cat.name,
-            questions: cat.statements.map((stmt) => ({
-              id: stmt.id, // Generating question ID
-              text: stmt.text
-            }))
-          })),
-        colorScale: {
-         colorName: "Sample Color Scale",
-         hexValues: ["#FF5733", "#33FF57", "#3357FF", "#5733FF", "#57FF33"],
-        },
+      templateName: templateBody.name,
+      scoreScale: {
+        start: 1,
+        end: templateBody.scale,
+        descriptions: templateBody.scaleDetails.map(
+          (detail: ScoreDescription, index: number) => ({
+            score: index + 1,
+            title: detail.heading,
+            description: detail.description,
+          })
+        ),
+      },
+
+      categories: templateBody.categories.map((cat: InputCategory) => ({
+        categoryName: cat.name,
+        questions: cat.statements.map((stmt) => ({
+          id: stmt.id, // Generating question ID
+          text: stmt.text,
+        })),
+      })),
+      colorScale: {
+        colorName: "Sample Color Scale",
+        hexValues: ["#FF5733", "#33FF57", "#3357FF", "#5733FF", "#57FF33"],
+      },
     });
-   
-    // Save the new template to the database
+
     const savedTemplate = await newTemplate.save();
 
-    // Return the saved template
-    // res.status(201).json({});
     res.status(201).json(savedTemplate);
   } catch (err: any) {
     switch (err.constructor) {
